@@ -1,3 +1,8 @@
+2008-05-29	Diego Ongaro <ongardie@gmail.com>
+
+	* panel-plugin/datetime.c: Always update every second when seconds are
+	shown (Bug #4117)
+
 2008-05-27	Diego Ongaro <ongardie@gmail.com>
 
 	* panel-plugin/datetime.c: "Fix tooltip hiding" uses gtk2.12 function,
